--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "test": "jest",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -24,6 +25,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.47",
     "sass": "^1.79.5",
     "tailwindcss": "^3.4.14",
