--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/react": "^16.0.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uri-js": "^4.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@testing-library/jest-dom": "^6.6.1",
     "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.5.13",
     "@types/node": "^22.7.5",
@@ -32,9 +35,8 @@
     "postcss": "^8.4.47",
     "sass": "^1.79.5",
     "tailwindcss": "^3.4.14",
-    "testing-library": "^0.0.2",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.5.3",
+    "typescript": "5.5.3",
     "typescript-eslint": "^8.7.0",
     "vite": "^5.4.8"
   }
