--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "ts-node": "^10.9.2",
     "uri-js": "^4.2.2"
   },
   "devDependencies": {
